# proto-rabbitmq

./: .gitignore  README.md  Vagrantfile  bootstrap.sh
experiment/: Cargo.toml  receiver.py  sender.py
experiment/src/: main.rs
statemachine/src/: main.rs
test1/: Cargo.toml  receive.py  send.py
test2/: new_task.py  worker.py
test3/: emit_log.py  receive_logs.py
test4/: emit_log_direct.py  receive_logs_direct.py
