[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.2"
futures = "0.3.21"
lapin = "2.1.1"
tokio = { version = "1.20.4", features = ["full"] }
uuid = { version = "1.1.1", features = ["v4"] }
tokio-stream = "0.1"
